--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "prettier": "^3.3.3",
     "prettier-plugin-go-template": "^0.0.15"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.3"
   }
 }
