--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,14 @@
 {
-  "plugins": ["prettier-plugin-go-template"],
-  "overrides": [
-    {
-      "files": ["*.html"],
-      "options": {
-        "parser": "go-template"
-      }
-    }
-  ]
+    "plugins": ["prettier-plugin-go-template"],
+    "overrides": [
+        {
+            "files": ["*.html"],
+            "options": {
+                "parser": "go-template"
+            }
+        }
+    ],
+    "tabWidth": 4,
+    "trailingComma": "es5",
+    "semi": true
 }
