feat: add bloquote alert render capabilities

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,6 +5,9 @@ markup:
     goldmark:
         renderer:
             unsafe: true
+        parser:
+            attribute:
+                block: true
 menu:
     main:
         - name: HOME
